--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,7 @@ move an ERC20 Token from one address to another in a contract?
 
 Code:
 
-
+0.refactor the tokenisation smart contracts and python script.-start simple.
 1.Add web3.py code to write a Blender file to IPFS
 2.create a token using that Blender file.
 
